<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/logo"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autoLink="email"
            android:linksClickable="true"
            android:textColorLink="@color/royalblue"
            android:text="@string/tvAbout_Text"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tvChangelog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvChangelog_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tvRate_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRate_text"
            android:id="@+id/btnRate"
            android:onClick="GoogleClick"
            android:drawableLeft="@drawable/play"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

</ScrollView>
